--- a/k8s/pod.yaml
+++ b/k8s/pod.yaml
@@ -1,20 +1,11 @@
 apiVersion: v1
-
 kind: Pod
-
 metadata:
-
   name: todo-pod
-
 spec:
-
   containers:
-
   - name: todo-app
-
-    image: trainwithshubham/django-todo:latest
-
+    image: pknashi/todoapp:v1
     ports:
-
     - containerPort: 8000
 
